<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".RegisterActivity">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutRegisUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputLayoutRegisPassword">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etRegisUsername"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Usename" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutRegisPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputLayoutRegisRepeatPassword">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etRegisPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutRegisRepeatPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etRegisRepeatPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Repeat Password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/ll_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/inputLayoutOTP"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayoutEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="Email Address" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/btn_sendEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:src="@drawable/ic_baseline_email_24"
                app:tint="@color/brightBlue" />

        </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayoutOTP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputLayoutTanggalLahir">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etOTP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="Enter Code OTP" />

            </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutTanggalLahir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="522dp"
            app:layout_constraintTop_toBottomOf="@+id/inputLayoutTelepon">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTanggalLahir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Tanggal Lahir" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutTelepon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="522dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTelepon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Telepon"
                android:inputType="phone" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/brightBlue"
        android:textColor="@color/white"
        android:text="Sign Up"
        android:layout_weight="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvAlreadyHaveAnAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already have an account?"
            app:layout_constraintEnd_toStartOf="@+id/textBtnSignUp"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

        <TextView
            android:id="@+id/textBtnSignIn"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign In"
            android:textColor="@color/brightBlue"
            android:textSize="14sp" />

    </LinearLayout>
    </LinearLayout>
    </ScrollView>
    <include
        android:id="@+id/layout_loading"
        layout="@layout/layout_loading"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>